@@ -1,3 +1,8 @@
+2006-02-03  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c (plot_c_bars): Clip candlesticks (financebars)
+	to vertical plot boundaries.
+
 2006-02-02  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/gplt_x11.c (handle_selection_event): Clean up yesterday's
